@@ -1,9 +1,15 @@
 # load in the mailman_sf extensions module
 extend_with mailman_sf
+extend_with argparse
+
+get_args 1
 
 # unfortunately we have to hard-code in the mailing list name for
 # the moment.  not sure how to do substitutions here.
-go https://lists.sourceforge.net/lists/admindb/pywx-announce
+go "https://lists.sourceforge.net/lists/admindb/${arg1}"
+
+code 200
+notfind "No such list"
 
 # fill out the page with the list password.
 getpassword "Enter list password: "
